--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.application.name=config-server
 spring.cloud.config.server.git.uri=https://github.com/se-f/ms.git
-# URL of Git repository containing the configuration files for microservices
+spring.cloud.config.server.git.searchPaths=configs  # This is the folder in the git repository where the configuration files are stored
 
 server.port=8888
 
 spring.cloud.config.server.git.clone-on-start=true
-# Clone the Git repository when the configuration server starts to ensure updated files are available
 
 spring.cloud.compatibility-verifier.enabled=false
