--- a/product-microservice/src/main/resources/application.properties
+++ b/product-microservice/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=product-microservice
 server.port=8082
 server.address=0.0.0.0
 
-# Configuration de la source de données (H2)
+# Configuration de la source de donnï¿½es (H2)
 spring.datasource.url=jdbc:h2:mem:ecommerce;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -29,3 +29,20 @@ management.endpoints.web.exposure.include=prometheus
 
 
 spring.config.import=configserver:http://localhost:8888
+
+# Configuration d'Axon
+axon.eventhandling.processors.default.mode=tracking
+axon.eventhandling.processors.default.source=eventStore
+axon.eventhandling.processors.default.initial-segment-count=1
+
+axon.eventhandling.processors.productProcessor.mode=tracking
+axon.eventhandling.processors.productProcessor.source=eventStore
+axon.eventhandling.processors.productProcessor.initial-segment-count=1
+
+axon.eventhandling.processors.eventProcessor.mode=tracking
+axon.eventhandling.processors.eventProcessor.source=eventStore
+axon.eventhandling.processors.eventProcessor.initial-segment-count=1
+
+axon.axonserver.servers=localhost
+#logging.level.org.axonframework=DEBUG
+#logging.level.io.axoniq.axonserver=DEBUG
