--- a/user-microservice/src/main/resources/application.properties
+++ b/user-microservice/src/main/resources/application.properties
@@ -26,3 +26,11 @@ management.prometheus.metrics.export.enabled=true
 
 
 spring.config.import=configserver:http://localhost:8888
+
+# Configuration d'Axon
+axon.eventhandling.processors.*.mode=tracking
+axon.eventhandling.processors.*.source=eventStore
+axon.eventhandling.processors.*.initial-segment-count=1
+
+# Utilisation de MySQL pour stocker les événements
+axon.eventstore.jpa.schema-generation.enabled=true
