--- a/user-microservice/pom.xml
+++ b/user-microservice/pom.xml
@@ -98,6 +98,13 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.axonframework</groupId>
+			<artifactId>axon-spring-boot-starter</artifactId>
+			<version>4.6.2</version> <!-- or the latest version -->
+		</dependency>
+
+
 
 	</dependencies>
 	<dependencyManagement>
